--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
         <!-- Masthead-->
         <header class="masthead">
             <div class="container">
-                <div class="masthead-subheading">Welcome to my page!</div>
+                
+                <div class="masthead-heading text-uppercase">Welcome to my page!</div>
                  <div class="masthead-subheading">Lauro Morales Montesinos</div>
                  <div class="masthead-subheading">PhD IIMAS - UNAM</div>
                 <div class="masthead-heading text-uppercase">It's Nice To Meet You</div>
