--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <div class="masthead-heading text-uppercase">Welcome to my page!</div>
                  <div class="masthead-subheading">Lauro Morales Montesinos</div>
                  <div class="masthead-subheading">PhD IIMAS - UNAM</div>
-                <div class="masthead-heading text-uppercase">It's Nice To Meet You</div>
+                <!-- <div class="masthead-heading text-uppercase">It's Nice To Meet You</div> -->
                 <a class="btn btn-primary btn-xl text-uppercase" href="#services">Tell Me More</a>
             </div>
         </header>
@@ -195,10 +195,14 @@
                         <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/1.jpg" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>2009-2011</h4>
-                                <h4 class="subheading">Our Humble Beginnings</h4>
+                                <h4>Currently</h4>
+                                <h4 class="subheading">Posdoctoral fellowship</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p></div>
+                            <div class="timeline-body"><p class="text-muted">
+                                Instituto de Investigacciones en Matematicas Aplicadas y Sistemas - UNAM
+                            </p>
+                            <p> Variational analysis and stability of coherent structures in continuum mechanics</p>
+                            </div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
