--- a/index.html
+++ b/index.html
@@ -199,9 +199,9 @@
                                 <h4 class="subheading">Posdoctoral fellowship</h4>
                             </div>
                             <div class="timeline-body"><p class="text-muted">
-                                Instituto de Investigacciones en Matematicas Aplicadas y Sistemas - UNAM
+                                Instituto de Investigaciones en Matematicas Aplicadas y Sistemas - UNAM
                             </p>
-                            <p> Variational analysis and stability of coherent structures in continuum mechanics</p>
+                            <p class="text-muted"> Variational analysis and stability of coherent structures in continuum mechanics</p>
                             </div>
                         </div>
                     </li>
@@ -209,30 +209,37 @@
                         <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/2.jpg" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>March 2011</h4>
-                                <h4 class="subheading">An Agency is Born</h4>
+                                <h4>2016-2020</h4>
+                                <h4 class="subheading">PhD in Mathematics</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p></div>
+                            <div class="timeline-body"><p class="text-muted">
+                                Minimizing structures for elastic energy in phase transitions under the regime of linear
+                                geometric theory in thin films
+                                </p></div>
                         </div>
                     </li>
                     <li>
                         <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/3.jpg" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>December 2015</h4>
-                                <h4 class="subheading">Transition to Full Service</h4>
+                                <h4>2014 - 2016</h4>
+                                <h4 class="subheading">Master in Mathematics</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p></div>
+                            <div class="timeline-body"><p class="text-muted">
+                                Phase transitions in thin film linear geometric theory
+                            </p></div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
                         <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/4.jpg" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>July 2020</h4>
-                                <h4 class="subheading">Phase Two Expansion</h4>
+                                <h4>2005 - 2010</h4>
+                                <h4 class="subheading">Bachelor in Physics</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p></div>
+                            <div class="timeline-body"><p class="text-muted">
+                                Existence of annular vortices with borders close to internal current lines of spherical hill vortex
+                                </p></div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
