--- a/index.html
+++ b/index.html
@@ -213,6 +213,9 @@
                                 <h4 class="subheading">PhD in Mathematics</h4>
                             </div>
                             <div class="timeline-body"><p class="text-muted">
+                                Instituto de Matematicas - UNAM
+                            </p>
+                            <div class="timeline-body"><p class="text-muted">
                                 Minimizing structures for elastic energy in phase transitions under the regime of linear
                                 geometric theory in thin films
                                 </p></div>
@@ -226,6 +229,9 @@
                                 <h4 class="subheading">Master in Mathematics</h4>
                             </div>
                             <div class="timeline-body"><p class="text-muted">
+                                Instituto de Matematicas - UNAM
+                            </p>
+                            <div class="timeline-body"><p class="text-muted">
                                 Phase transitions in thin film linear geometric theory
                             </p></div>
                         </div>
@@ -237,6 +243,9 @@
                                 <h4>2005 - 2010</h4>
                                 <h4 class="subheading">Bachelor in Physics</h4>
                             </div>
+                            <div class="timeline-body"><p class="text-muted">
+                                Facultad de Ciencias - UNAM
+                            </p>
                             <div class="timeline-body"><p class="text-muted">
                                 Existence of annular vortices with borders close to internal current lines of spherical hill vortex
                                 </p></div>
