--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                                 <h4 class="subheading">Posdoctoral fellowship</h4>
                             </div>
                             <div class="timeline-body"><p class="text-muted">
-                                Instituto de Investigaciones en Matematicas Aplicadas y Sistemas - UNAM
+                                <b>Instituto de Investigaciones en Matematicas Aplicadas y Sistemas - UNAM</b>
                             </p>
                             <p class="text-muted"> Variational analysis and stability of coherent structures in continuum mechanics</p>
                             </div>
