--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                                 <h4 class="subheading">PhD in Mathematics</h4>
                             </div>
                             <div class="timeline-body"><p class="text-muted">
-                                Instituto de Matematicas - UNAM
+                               <b> Instituto de Matematicas - UNAM </b> 
                             </p>
                             <div class="timeline-body"><p class="text-muted">
                                 Minimizing structures for elastic energy in phase transitions under the regime of linear
@@ -229,7 +229,7 @@
                                 <h4 class="subheading">Master in Mathematics</h4>
                             </div>
                             <div class="timeline-body"><p class="text-muted">
-                                Instituto de Matematicas - UNAM
+                                <b> Instituto de Matematicas - UNAM </b> 
                             </p>
                             <div class="timeline-body"><p class="text-muted">
                                 Phase transitions in thin film linear geometric theory
@@ -244,7 +244,7 @@
                                 <h4 class="subheading">Bachelor in Physics</h4>
                             </div>
                             <div class="timeline-body"><p class="text-muted">
-                                Facultad de Ciencias - UNAM
+                                <b> Facultad de Ciencias - UNAM </b> 
                             </p>
                             <div class="timeline-body"><p class="text-muted">
                                 Existence of annular vortices with borders close to internal current lines of spherical hill vortex
