--- a/index.html
+++ b/index.html
@@ -282,7 +282,13 @@
                         </span>
                         <h4 class="my-3">Teacher assistant </h4>
                         <p class="text-muted">
-                            kjfkdk
+                            <ul>
+                              <li>Complex variable</li>
+                              <li>Differential and integral calculus I - IV</li>
+                              <li>Fourier analysis</li>
+                              <li>Stochastic process</li>
+                               <li>Electromagnetic theory</li> 
+                            </ul>  
                         </p>
                     </div>
                     <div class="col-md-4">
