--- a/index.html
+++ b/index.html
@@ -283,13 +283,13 @@
                         </span>
                         <h4 class="my-3">Teacher assistant </h4>
                         <p class="text-muted">
-                            <ul>
-                              <li>Complex variable</li>
-                              <li>Differential and integral calculus I - IV</li>
-                              <li>Fourier analysis</li>
-                              <li>Stochastic process</li>
-                               <li>Electromagnetic theory</li> 
-                            </ul>  
+                            
+                              Complex variable
+                              Differential and integral calculus I - IV
+                              Fourier analysis
+                              Stochastic process
+                              Electromagnetic theory
+                             
                         </p>
                     </div>
                     <div class="col-md-4">
