--- a/index.html
+++ b/index.html
@@ -282,6 +282,7 @@
                             <i class="fas fa-shopping-cart fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">Teacher assistant </h4>
+                         <p class="text-muted"><b>  Facultad de Ciencias - UNAM</b></p>
                         <p class="text-muted"> Complex variable </p>
                         <p class="text-muted"> Differential and integral calculus I - IV </p>      
                         <p class="text-muted"> Fourier analysis </p>    
@@ -294,8 +295,9 @@
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
                             <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
                         </span>
-                        <h4 class="my-3">Responsive Design</h4>
-                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                        <h4 class="my-3">Teacher</h4>
+                         <p class="text-muted"><b>  Facultad de Ciencias - UNAM</b></p>
+                       <p class="text-muted"> Differential and integral calculus I - IV </p> 
                     </div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
