--- a/index.html
+++ b/index.html
@@ -54,7 +54,6 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">About me</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
                 </div>
         
 		    <div class="column">
@@ -238,7 +237,7 @@
                         </div>
                     </li>
                     <li class="timeline-inverted">
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/4.jpg" alt="..." /></div>
+                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/download.jpeg" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4>2005 - 2010</h4>
