--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">About me</h2>
                 </div>
-        
+                <div class="row">
 		    <div class="column">
 			    <img src='http://ecx.images-amazon.com/images/I/21-leKb-zsL._SL500_AA300_.png' class='iconDetails'>
 		    </div>	
@@ -68,6 +68,7 @@
                             Currently I am in my first posdoctoral about ... with Dr. Ramon Plaza at IIMAS-UNAM
                 	</p>
 	            </div>
+		</div>
             </div>
         </section>
 	    
@@ -237,7 +238,7 @@
                         </div>
                     </li>
                     <li class="timeline-inverted">
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/download.jpeg" alt="..." /></div>
+                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/4.jpg" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4>2005 - 2010</h4>
