--- a/index.html
+++ b/index.html
@@ -56,10 +56,11 @@
                     <h2 class="section-heading text-uppercase">About me</h2>
                 </div>
                 <div class="row">
-		    <div class="column">
-			    <img src='http://ecx.images-amazon.com/images/I/21-leKb-zsL._SL500_AA300_.png' class='iconDetails'>
+		    <div class="column" style="width:50%">
+			    <img src='http://ecx.images-amazon.com/images/I/21-leKb-zsL._SL500_AA300_.png' class='iconDetails' style="width:50%">
 		    </div>	
-	            <div class="column">
+			
+	            <div class="column" style="width:50%">
 	           	<p class="text-muted">
                             I am a mathematician and i am interestig in parabolic partial differential equations,
                             more specifically in the analysis and regularity aspects
