--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
                     <h2 class="section-heading text-uppercase">About me</h2>
                 </div>
                 <div class="row">
-		    <div class="column" style="width:50%">
-			    <img src='http://ecx.images-amazon.com/images/I/21-leKb-zsL._SL500_AA300_.png' class='iconDetails' style="width:50%">
+		    <div class="column" style="width:30%">
+			    <img src='http://ecx.images-amazon.com/images/I/21-leKb-zsL._SL500_AA300_.png' class='iconDetails' style="width:20%">
 		    </div>	
 			
-	            <div class="column" style="width:50%">
+	            <div class="column" style="width:80%">
 	           	<p class="text-muted">
                             I am a mathematician and i am interestig in parabolic partial differential equations,
                             more specifically in the analysis and regularity aspects
@@ -221,6 +221,7 @@
                                 Minimizing structures for elastic energy in phase transitions under the regime of linear
                                 geometric theory in thin films
                                 </p></div>
+			   <a href="http://132.248.9.195/ptd2021/noviembre/0819767/Index.html">Thesis</a>
                         </div>
                     </li>
                     <li>
@@ -236,6 +237,7 @@
                             <div class="timeline-body"><p class="text-muted">
                                 Phase transitions in thin film linear geometric theory
                             </p></div>
+			   <a href="http://132.248.9.195/ptd2016/enero/0740310/Index.html">Thesis</a>
                         </div>
                     </li>
                     <li class="timeline-inverted">
