--- a/index.html
+++ b/index.html
@@ -251,9 +251,11 @@
                                 <b> Facultad de Ciencias - UNAM </b> 
                             </p>
                             <div class="timeline-body"><p class="text-muted">
-                                Existence of annular vortices with borders close to internal current lines of spherical hill vortex
+				     <a href="http://132.248.9.195/ptd2013/diciembre/0706972/Index.html">
+                                    Existence of annular vortices with borders close to internal current lines of spherical hill vortex
+				     </a>
                                 </p></div>
-			     <a href="http://132.248.9.195/ptd2013/diciembre/0706972/Index.html">Thesis</a>	
+			    	
                         </div>
                     </li>
                     
