--- a/index.html
+++ b/index.html
@@ -218,10 +218,11 @@
                                <b> Instituto de Matematicas - UNAM </b> 
                             </p>
                             <div class="timeline-body"><p class="text-muted">
+			     <a href="http://132.248.9.195/ptd2021/noviembre/0819767/Index.html">
                                 Minimizing structures for elastic energy in phase transitions under the regime of linear
                                 geometric theory in thin films
                                 </p></div>
-			   <a href="http://132.248.9.195/ptd2021/noviembre/0819767/Index.html">Thesis</a>
+			  </a>
                         </div>
                     </li>
                     <li>
@@ -235,9 +236,10 @@
                                 <b> Instituto de Matematicas - UNAM </b> 
                             </p>
                             <div class="timeline-body"><p class="text-muted">
+			     <a href="http://132.248.9.195/ptd2016/enero/0740310/Index.html">
                                 Phase transitions in thin film linear geometric theory
+			     </a>
                             </p></div>
-			   <a href="http://132.248.9.195/ptd2016/enero/0740310/Index.html">Thesis</a>
                         </div>
                     </li>
                     <li class="timeline-inverted">
@@ -362,6 +364,9 @@
                         <a href="#!"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/facebook.svg" alt="..." aria-label="Facebook Logo" /></a>
                     </div>
                     <div class="col-md-3 col-sm-6 my-3">
+                        <a href="#!"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/ibm.svg" alt="..." aria-label="IBM Logo" /></a>
+                    </div>
+		   <div class="col-md-3 col-sm-6 my-3">
                         <a href="#!"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/ibm.svg" alt="..." aria-label="IBM Logo" /></a>
                     </div>
                 </div>
