--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
                 </div>
                 <div class="row">
 		    <div class="column" style="width:30%">
-			    <img src='http://ecx.images-amazon.com/images/I/21-leKb-zsL._SL500_AA300_.png' class='iconDetails' style="width:20%">
+			    <img src='http://ecx.images-amazon.com/images/I/21-leKb-zsL._SL500_AA300_.png' class='iconDetails' style="width:25%">
 		    </div>	
 			
-	            <div class="column" style="width:80%">
+	            <div class="column" style="width:70%">
 	           	<p class="text-muted">
                             I am a mathematician and i am interestig in parabolic partial differential equations,
                             more specifically in the analysis and regularity aspects
@@ -367,7 +367,7 @@
                         <a href="#!"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/ibm.svg" alt="..." aria-label="IBM Logo" /></a>
                     </div>
 		   <div class="col-md-3 col-sm-6 my-3">
-                        <a href="#!"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/ibm.svg" alt="..." aria-label="IBM Logo" /></a>
+                        <a href="#!"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/arduino.png" alt="..." aria-label="IBM Logo" /></a>
                     </div>
                 </div>
             </div>
