--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <h2 class="section-heading text-uppercase">About me</h2>
                 </div>
                 <div class="row">
-		    <div class="column" style="width:30%">
+		    <div class="column" style="width:30%" align="center">
 			    <img src='http://ecx.images-amazon.com/images/I/21-leKb-zsL._SL500_AA300_.png' class='iconDetails' style="width:25%">
 		    </div>	
 			
@@ -367,7 +367,7 @@
                         <a href="#!"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/ibm.svg" alt="..." aria-label="IBM Logo" /></a>
                     </div>
 		   <div class="col-md-3 col-sm-6 my-3">
-                        <a href="#!"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/arduino.png" alt="..." aria-label="IBM Logo" /></a>
+                        <a href="#!"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/arduino.png" alt="arduino_logo" aria-label="Arduino Logo" /></a>
                     </div>
                 </div>
             </div>
