--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 </div>
                 <div class="row">
 		    <div class="column" style="width:30%" align="center">
-			    <img src="assets/img/portfolio/1.jpg" alt="photo"  class='iconDetails' style="width:25%">
+			    <img src="assets/img/foto.jpg" alt="photo"  class='iconDetails' style="width:25%">
 		    </div>	
 			
 	            <div class="column" style="width:70%">
