--- a/index.html
+++ b/index.html
@@ -57,7 +57,10 @@
                 </div>
                 <div class="row">
 		    <div class="column" style="width:30%" align="center">
-			    <img src="assets/img/foto.jpg" alt="photo"  class='iconDetails' style="width:60%">
+			     <div class="timeline-image">
+				<img class="rounded-circle img-fluid" src="assets/img/foto.jpg" alt="photo" style="width:60%" />
+			     </div>
+			    
 		    </div>	
 			
 	            <div class="column" style="width:70%">
