--- a/index.html
+++ b/index.html
@@ -58,14 +58,14 @@
                 <div class="row">
 		    <div class="column" style="width:30%" align="center">
 			     <div class="timeline-image">
-				<img class="rounded-circle img-fluid" src="assets/img/foto.jpg" alt="photo" style="width:60%, border:solid" />
+				<img class="rounded-circle img-fluid" src="assets/img/foto.jpg" alt="photo" style="width:60%" />
 			     </div>
 			    
 		    </div>	
 			
 	            <div class="column" style="width:70%">
 	           	<p class="text-muted">
-                            I am a mathematician and i am interestig in parabolic partial differential equations,
+                            I am a mathematician and i am interestig in eliptic partial differential equations,
                             more specifically in the analysis and regularity aspects
                             of these equations. My contributions 
                             I learned from my mentors and friends in different Dr. Antonio Capella at IMATE-UNAM
