--- a/index.html
+++ b/index.html
@@ -58,9 +58,8 @@
                 <div class="row">
 		    <div class="column" style="width:30%" align="center">
 			     <div class="timeline-image">
-				<img class="rounded-circle img-fluid" src="assets/img/foto.jpg" alt="photo" style="width:60%" />
+				<img class="rounded-circle img-fluid" src="assets/img/foto.jpg" alt="photo" style="width:60%; border: 5px solid #ffc800"" />
 			     </div>
-			    
 		    </div>	
 			
 	            <div class="column" style="width:70%">
