--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
                         <a href="#!"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/ibm.svg" alt="..." aria-label="IBM Logo" /></a>
                     </div>
 		   <div class="col-md-3 col-sm-6 my-3">
-                        <a href="#!"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/arduino.png" alt="arduino_logo" aria-label="Arduino Logo" /></a>
+                        <a href="#!"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/latex-svgrepo-com.svg" alt="latex_logo" aria-label="Latex Logo" /></a>
                     </div>
                 </div>
             </div>
