--- a/index.html
+++ b/index.html
@@ -68,7 +68,9 @@
                             more specifically in the analysis and regularity aspects
                             of these equations. My contributions 
                             I learned from my mentors and friends in different Dr. Antonio Capella at IMATE-UNAM
-                            Currently I am in my first posdoctoral about ... with Dr. Ramon Plaza at IIMAS-UNAM
+                            Currently I am in my first posdoctoral about ... with Dr. Ramon Plaza at IIMAS-UNAM.
+			    My research interests include: Variation calculus, Differential equations, Analyisis, Statistics and probability and
+				Scientific programation.
                 	</p>
 	            </div>
 		</div>
