--- a/index.html
+++ b/index.html
@@ -69,8 +69,14 @@
                             of these equations. My contributions 
                             I learned from my mentors and friends in different Dr. Antonio Capella at IMATE-UNAM
                             Currently I am in my first posdoctoral about ... with Dr. Ramon Plaza at IIMAS-UNAM.
-			    My research interests include: Variation calculus, Differential equations, Analyisis, Statistics and probability and
-				Scientific programation.
+			    My research interests include: 
+				<ul>
+  					<li>Variation calculus</li>
+ 					 <li>Differential equations</li>
+  					<li>Analyisis</li>
+					<li>Statistics and probability</li>
+					<li>Scientific programation</li>
+				</ul>
                 	</p>
 	            </div>
 		</div>
