--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                             I learned from my mentors and friends in different Dr. Antonio Capella at IMATE-UNAM
                             Currently I am in my first posdoctoral about ... with Dr. Ramon Plaza at IIMAS-UNAM.
 			    My research interests include: 
-				<ul>
+				<ul class="text-muted">
   					<li>Variation calculus</li>
  					 <li>Differential equations</li>
   					<li>Analyisis</li>
