--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@
                             of these equations. My contributions 
                             I learned from my mentors and friends in different Dr. Antonio Capella at IMATE-UNAM
                             Currently I am in my first posdoctoral about ... with Dr. Ramon Plaza at IIMAS-UNAM.
+			</p>
+			<p class="text-muted">
 			    My research interests include: 
 				<ul class="text-muted">
   					<li>Variation calculus</li>
