--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
                         <a href="#!"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/facebook.svg" alt="..." aria-label="Facebook Logo" /></a>
                     </div>
 		   <div class="col-md-3 col-sm-6 my-3">
-                        <a href="#!"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/latex-svgrepo-com.svg" alt="latex_logo" aria-label="Latex Logo" /></a>
+                        <a href="#!"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/latex-svgrepo-com.svg" alt="latex_logo" aria-label="Latex Logo" style="filter: grayscale(1);"/></a>
                     </div>
                 </div>
             </div>
