--- a/index.html
+++ b/index.html
@@ -400,6 +400,7 @@
 			<article>
    			 <p><i class="fa fa-lg fa-phone"></i>5533780930</p>
 			</article>
+			<i class="fas fa-clock" style="font-size:60px;color:lightblue;text-shadow:2px 2px 4px #000000;"></i>
                         
                     </div>
                 
