--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
 			<p style="color:White;">Apdo. Postal 20-726 C.P. 01000 México CDMX</p>
                         <a href="mailto:llm@ciencias.unam.mx">llm@ciencias.unam.mx</a>
 			<article>
-   			 <p><i class="fa fa-lg fa-phone"></i>5533780930</p>
+   			 <p><i class="fas fa-phone" tyle="font-size:40px color:yellow></i>5533780930</p>
 			</article>
 			<i class="fas fa-clock" style="font-size:60px;color:lightblue;text-shadow:2px 2px 4px #000000;"></i>
                         
