--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
 	<script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+	<script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
     </head>
     <body id="page-top">
         <!-- Navigation-->
@@ -398,8 +399,7 @@
 			<p style="color:White;">Apdo. Postal 20-726 C.P. 01000 México CDMX</p>
                         <a href="mailto:llm@ciencias.unam.mx">llm@ciencias.unam.mx</a>
 			<p><i class="fas fa-phone" style="font-size:40px color:yellow"></i> 5533780930</p>
-   			 <p><i class="fas fa-phone" style="font-size:40px color:yellow"></i>5533780930</p>
-			<i class="fas fa-clock" style="font-size:60px;color:lightblue;text-shadow:2px 2px 4px #000000;"></i>
+			<i class="fas fa-clock" style="font-size:60px;color:#ffc800;text-shadow:2px 2px 4px #000000;"></i>
                         
                     </div>
                 
