--- a/index.html
+++ b/index.html
@@ -398,7 +398,8 @@
                         <p style="color:White;">Instituto de Investigaciones en Matematicas Aplicadas IIMAS- UNAM</p>
 			<p style="color:White;">Apdo. Postal 20-726 C.P. 01000 México CDMX</p>
                         <a href="mailto:llm@ciencias.unam.mx">llm@ciencias.unam.mx</a>
-			<p><i class="fas fa-phone" style="font-size:40px color:yellow"></i> 5533780930</p>
+			<p style="color:White><i class="fas fa-phone" style="font-size:40px color:#ffc800"></i> 5533780930</p>
+			<i class='fas fa-phone' style='font-size:24px'></i>
 			<i class="fas fa-clock" style="font-size:60px;color:#ffc800;text-shadow:2px 2px 4px #000000;"></i>
                         
                     </div>
