--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                            <i class="fas fa-shopping-cart fa-stack-1x fa-inverse"></i>
+                            <i class="fas fa-clock fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">Teacher assistant </h4>
                          <p class="text-muted"><b>  Facultad de Ciencias - UNAM</b></p>
