--- a/index.html
+++ b/index.html
@@ -314,8 +314,11 @@
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
                             <i class="fas fa-book-open fa-stack-1x fa-inverse"></i>
                         </span>
-                        <h4 class="my-3">Web Security</h4>
-                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                        <h4 class="my-3">Teacher online</h4>
+                        <p class="text-muted"> UnADM.</p>
+			<p class="text-muted"> Statistics I </p>
+			<p class="text-muted"> Multivariable calculus </p>
+			<p class="text-muted"> Logic introduction </p>
                     </div>
                 </div>
             </div>
