--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                                 <img class="img-fluid" src="assets/img/portfolio/1.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Article</div>
+                                <div class="portfolio-caption-heading">Published Article</div>
                                 <div class="portfolio-caption-subheading text-muted">On the quasiconvex hull for a three-well problem in two dimensional linear elasticity</div>
                             </div>
                         </div>
@@ -120,8 +120,8 @@
                                 <img class="img-fluid" src="assets/img/portfolio/2.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Explore</div>
-                                <div class="portfolio-caption-subheading text-muted">Graphic Design</div>
+                                <div class="portfolio-caption-heading">Published Article</div>
+                                <div class="portfolio-caption-subheading text-muted">On the Symmetric Lamination Convez and Quasiconvex Hull for the Coplanar n-well problem in two dimensions</div>
                             </div>
                         </div>
                     </div>
