--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
                             <i class="fas fa-book-open fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">Teacher online</h4>
-                        <p class="text-muted"> UnADM.</p>
+			<p class="text-muted"><b>  Mathematics at UnADM</b></p>
 			<p class="text-muted"> Statistics I </p>
 			<p class="text-muted"> Multivariable calculus </p>
 			<p class="text-muted"> Logic introduction </p>
