--- a/index.html
+++ b/index.html
@@ -509,6 +509,7 @@
                 </div>
             </div>
         </div>
+	<!-- Future work    
         <!-- Portfolio item 4 modal popup-->
         <div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-hidden="true">
             <div class="modal-dialog">
@@ -614,6 +615,7 @@
                 </div>
             </div>
         </div>
+	-->
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
