--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
                         </div>
                     </div>
                     <div class="col-lg-4 col-sm-6 mb-4">
+		<!-- Future work
                         <!-- Portfolio item 3-->
                         <div class="portfolio-item">
                             <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal3">
@@ -187,6 +188,7 @@
                     </div>
                 </div>
             </div>
+	-->
         </section>
         <!-- About-->
         <section class="page-section" id="about">
