--- a/index.html
+++ b/index.html
@@ -141,6 +141,8 @@
                             </div>
                         </div>
                     </div>
+		-->
+		<!-- Futere work 2
                     <div class="col-lg-4 col-sm-6 mb-4 mb-lg-0">
                         <!-- Portfolio item 4-->
                         <div class="portfolio-item">
@@ -156,6 +158,8 @@
                             </div>
                         </div>
                     </div>
+		    -->
+		    <!-- Future work3
                     <div class="col-lg-4 col-sm-6 mb-4 mb-sm-0">
                         <!-- Portfolio item 5-->
                         <div class="portfolio-item">
@@ -171,6 +175,8 @@
                             </div>
                         </div>
                     </div>
+		   -->
+		   <!Future work 4
                     <div class="col-lg-4 col-sm-6">
                         <!-- Portfolio item 6-->
                         <div class="portfolio-item">
@@ -188,8 +194,9 @@
                     </div>
                 </div>
             </div>
+	    -->	
         </section>
-	-->
+
         <!-- About-->
         <section class="page-section" id="about">
             <div class="container">
