--- a/index.html
+++ b/index.html
@@ -68,7 +68,9 @@
 	           	<p class="text-muted">
                             I am a mathematician and i am interestig in eliptic partial differential equations,
                             more specifically in the analysis and regularity aspects
-                            of these equations. My contributions 
+                            of these equations. 
+				<br></br>
+			    My contributions 
                             I learned from my mentors and friends in different Dr. Antonio Capella at IMATE-UNAM
                             Currently I am in my first posdoctoral about ... with Dr. Ramon Plaza at IIMAS-UNAM.
 			</p>
