--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
                     <div class="row align-items-stretch mb-5">
                         <p style="color:White;"> <i class="fas fa-map-marked-alt" style="font-size:30px; color:#ffc800"></i> Instituto de Investigaciones en Matematicas Aplicadas IIMAS- UNAM</p>
 			<p style="color:White;">Apdo. Postal 20-726 C.P. 01000 México CDMX</p>
-                        <a href="mailto:lmm@ciencias.unam.mx"> <i class="fas fa-envelope-open" style="font-size:30px; color:#ffc800"></i> llm@ciencias.unam.mx</a>
+                        <a href="mailto:lmm@ciencias.unam.mx"> <i class="fas fa-envelope-open" style="font-size:30px; color:#ffc800"></i> lmm@ciencias.unam.mx</a>
 			 <br> </br>
 			<p style="color:White"> <i class="fas fa-phone" style="font-size:30px; color:#ffc800"></i> 5533780930</p>
                     </div>
