--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
 				</ul>
                 	</p>
 	            </div>
+			<a href="https://github.com/lmm-ciencias/lmm-ciencias.github.io/blob/main/assets/img/cv-2023-spanish.pdf"> Spanish CV </a>
 		</div>
             </div>
         </section>
