--- a/index.html
+++ b/index.html
@@ -77,14 +77,15 @@
 			<p class="text-muted">
 			    My research interests include: 
 				<ul class="text-muted">
-  					<li>Variation calculus</li>
- 					 <li>Differential equations</li>
+  					<li>Calculus of Variations</li>
+ 					 <li>Partial Differential Equations</li>
   					<li>Analyisis</li>
-					<li>Statistics and probability</li>
-					<li>Scientific programation</li>
+					<li>Statistics and Probability</li>
+					<li>Scientific Programation</li>
 				</ul>
                 	</p>
 			<a href="https://github.com/lmm-ciencias/lmm-ciencias.github.io/blob/main/assets/img/cv-2023-spanish.pdf"> Spanish CV </a>
+			<a href="https://github.com/lmm-ciencias/lmm-ciencias.github.io/blob/main/assets/img/cv-2023-spanish.pdf"> English CV </a>
 			    
 	            </div>
 		</div>
