--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
 					<li>Scientific Programation</li>
 				</ul>
                 	</p>
-			<a href="https://github.com/lmm-ciencias/lmm-ciencias.github.io/blob/main/assets/img/cv-2023-spanish.pdf"> Spanish CV </a>
-			<a href="https://github.com/lmm-ciencias/lmm-ciencias.github.io/blob/main/assets/img/cv-2023-spanish.pdf"> English CV </a>
+			<a href="assets/img/cv-2023-spanish.pdf"> Spanish CV </a>
+			<a href="assets/img/cv-2023-spanish.pdf"> English CV </a>
 			    
 	            </div>
 		</div>
