--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
 					<li>Scientific Programation</li>
 				</ul>
                 	</p>
-			<a href="assets/img/cv-2023-spanish.pdf"> Spanish CV </a>
-			<a href="assets/img/cv-2023-spanish.pdf"> English CV </a>
-			    
+			<pre class="tab">
+			<a href="assets/img/cv-2023-spanish.pdf"> Spanish CV </a>	<a href="assets/img/cv-2023-spanish.pdf"> English CV </a>
+			</pre>    
 	            </div>
 		</div>
             </div>
