--- a/index.html
+++ b/index.html
@@ -84,9 +84,8 @@
 					<li>Scientific Programation</li>
 				</ul>
                 	
-			<pre class="tab">
-			<a href="assets/img/cv-2023-spanish.pdf"> Spanish CV </a>	<a href="assets/img/cv-2023-spanish.pdf"> English CV </a>
-			</pre>    
+			<a href="assets/img/cv-2023-spanish.pdf"> Spanish CV </a> &emsp	<a href="assets/img/cv-2023-spanish.pdf"> English CV </a>
+			   
 		    </p>    
 	            </div>
 		</div>
