--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 					<li>Scientific Programation</li>
 				</ul>
                 	
-			<a href="assets/img/cv-2023-spanish.pdf"> Spanish CV </a> &emsp	<a href="assets/img/cv-2023-spanish.pdf"> English CV </a>
+			<p class="text-muted"> <a href="assets/img/cv-2023-spanish.pdf"> Spanish CV </a> &emsp	<a href="assets/img/cv-2023-spanish.pdf"> English CV </a> </p>
 			   
 		    </p>    
 	            </div>
