--- a/index.html
+++ b/index.html
@@ -84,8 +84,7 @@
 					<li>Scientific Programation</li>
 				</ul>
                 	
-			
-			<a href="assets/img/cv-2023-spanish.pdf"> Spanish CV </a>  <a href="assets/img/cv-2023-spanish.pdf"> English CV
+			<a href="assets/img/cv-2023-spanish.pdf"> Spanish CV </a> &nbsp;&nbsp;&nbsp;&nbsp  <a href="assets/img/cv-2023-spanish.pdf"> English CV
 			</a> 
 				
 		    </p>    
