--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-md-3 col-sm-6 my-3">
-                        <a href="#!"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/python-svgrepo-com.svg" alt="..." aria-label="Microsoft Logo" /></a>
+                        <a href="https://www.python.org/"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/python-svgrepo-com.svg" alt="..." aria-label="Microsoft Logo" /></a>
                     </div>
                     <div class="col-md-3 col-sm-6 my-3">
                         <a href="#!"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/latex-svgrepo-com.svg" alt="..." aria-label="Google Logo" /></a>
