--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
                         <a href="#!"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/matlab-svgrepo-com.svg" alt="..." aria-label="Facebook Logo" /></a>
                     </div>
 		   <div class="col-md-3 col-sm-6 my-3">
-                       <img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/arduino-svgrepo-com.svg"   alt="..." aria-label="Latex Logo" />
+                      <a href="https://www.arduino.cc/"> <img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/arduino-svgrepo-com.svg"   alt="..." aria-label="Latex Logo" /> </a>
                     </div>
                 </div>
             </div>
