--- a/index.html
+++ b/index.html
@@ -336,16 +336,16 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-md-3 col-sm-6 my-3">
-                        <a href="https://www.python.org/ target="_blank" "><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/python-svgrepo-com.svg" alt="..." aria-label="Microsoft Logo" /></a>
+                        <a href="https://www.python.org/" target="_blank"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/python-svgrepo-com.svg" alt="..." aria-label="Microsoft Logo" /></a>
                     </div>
                     <div class="col-md-3 col-sm-6 my-3">
-                        <a href="https://www.latex-project.org/help/documentation/ target="_blank"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/latex-svgrepo-com.svg" alt="..." aria-label="Google Logo" /></a>
+                        <a href="https://www.latex-project.org/help/documentation/" target="_blank"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/latex-svgrepo-com.svg" alt="..." aria-label="Google Logo" /></a>
                     </div>
                     <div class="col-md-3 col-sm-6 my-3">
-                        <a href="https://la.mathworks.com/academia.html?s_tid=gn_acad target="_blank"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/matlab-svgrepo-com.svg" alt="..." aria-label="Facebook Logo" /></a>
+                        <a href="https://la.mathworks.com/academia.html?s_tid=gn_acad" target="_blank"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/matlab-svgrepo-com.svg" alt="..." aria-label="Facebook Logo" /></a>
                     </div>
 		   <div class="col-md-3 col-sm-6 my-3">
-                      <a href="https://www.arduino.cc/ target="_blank" > <img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/arduino-svgrepo-com.svg"   alt="..." aria-label="Latex Logo" /> </a>
+                      <a href="https://www.arduino.cc/" target="_blank"> <img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/arduino-svgrepo-com.svg"   alt="..." aria-label="Latex Logo" /> </a>
                     </div>
                 </div>
             </div>
